--- a/CommerceV3/Areas/Admin/Views/Brands/Edit.cshtml
+++ b/CommerceV3/Areas/Admin/Views/Brands/Edit.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="row">
     <div class="col-md-12">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -18,7 +18,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Logo" class="control-label"></label>
-                <input asp-for="Logo" class="form-control" />
+                <input asp-for="Logo" type="hidden" />
+                @if (string.IsNullOrEmpty(Model.Logo))
+                {
+                    <img src="~/Uploads/@Model.Logo" width="150" />
+
+                }
+                <input type="file" name="upload" class=" form-controll" />
                 <span asp-validation-for="Logo" class="text-danger"></span>
             </div>
 			<div class="form-group">
