--- a/CommerceV3/Areas/Admin/Views/MenuItems/Index.cshtml
+++ b/CommerceV3/Areas/Admin/Views/MenuItems/Index.cshtml
@@ -27,7 +27,7 @@
                 @Html.DisplayNameFor(model => model.Position)
             </th>
             <th class="text-nowrap">
-                @Html.DisplayNameFor(model => model.ParentMenuItem)
+                @Html.DisplayNameFor(model => model.ParentMenuItem.Name)
             </th>
             <th class="text-nowrap all" data-orderable="false">Eylemler</th>
         </tr>
