--- a/CommerceV3/Areas/Admin/Views/MenuItems/Create.cshtml
+++ b/CommerceV3/Areas/Admin/Views/MenuItems/Create.cshtml
@@ -39,7 +39,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="ParentMenuItemId" class="control-label"></label>
-                <select asp-for="ParentMenuItemId" class ="form-control" asp-items="ViewBag.ParentMenuItemId"></select>
+                <select asp-for="ParentMenuItemId" class ="form-control" asp-items="ViewBag.ParentMenuItemId">
+                </select>
             </div>
 			<div class="form-group">
 				<input type="submit" value="Kaydet" class="btn btn-sm btn-primary" />
