--- a/CommerceV3/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CommerceV3/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -79,38 +79,23 @@ License: You must have a valid license purchased only from themeforest(the above
 							</a>
 							<ul class="dropdown-menu dropdown-menu-default">
 								<li>
-									<a href="page_user_profile_1.html">
-										<i class="icon-user"></i> My Profile
-									</a>
+									
+                                        <a asp-action="Manage" asp-controller="Account" asp-area="Identity">
+                                            <i class="icon-user"></i> Profilim
+                                        </a>
+                                        
+                                               
 								</li>
-								<li>
-									<a href="app_calendar.html">
-										<i class="icon-calendar"></i> My Calendar
-									</a>
-								</li>
-								<li>
-									<a href="app_inbox.html">
-										<i class="icon-envelope-open"></i> My Inbox
-										<span class="badge badge-danger"> 3 </span>
-									</a>
-								</li>
-								<li>
-									<a href="app_todo.html">
-										<i class="icon-rocket"></i> My Tasks
-										<span class="badge badge-success"> 7 </span>
-									</a>
-								</li>
+								
 								<li class="divider"> </li>
-								<li>
-									<a href="page_user_lock_1.html">
-										<i class="icon-lock"></i> Lock Screen
-									</a>
-								</li>
-								<li>
-									<a href="page_user_login_1.html">
-										<i class="icon-key"></i> Log Out
-									</a>
-								</li>
+								
+                                <li>
+                                    <a href="javascript:void(0);" onclick="document.getElementById
+                                       ('logoutForm').submit();">
+                                        <i class="icon-key"></i> Çıkış
+                                    </a>
+                                    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm"></form>
+                                </li>
 							</ul>
 						</li>
 						<!-- END USER LOGIN DROPDOWN -->
@@ -148,7 +133,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             </div>
                         </li>
                         <!-- END SIDEBAR TOGGLER BUTTON -->
-                        <li class="nav-item start ">
+                        <li class="nav-item start @(this.ViewContext.RouteData.Values["controller"].ToString() == "Home"?"active":"")">
                             <a href="javascript:;" class="nav-link nav-toggle">
                                 <i class="icon-home"></i>
                                 <span class="title">Başlangıç</span>
@@ -166,55 +151,55 @@ License: You must have a valid license purchased only from themeforest(the above
                         <li class="heading">
                             <h3 class="uppercase">Modüller</h3>
                         </li>
-                        <li class="nav-item  ">
+                        <li class="nav-item @(this.ViewContext.RouteData.Values["controller"].ToString() == "Products"?"active":"")"> 
                             <a asp-action="Index" asp-controller="Products" class="nav-link">
                                 <i class="icon-diamond"></i>
                                 <span class="title">Ürünler</span>
                             </a>
                         </li>
-                        <li class="nav-item  ">
+                        <li class="nav-item  @(this.ViewContext.RouteData.Values["controller"].ToString() == "Brands"?"active":"")">
                             <a asp-action="Index" asp-controller="Brands" class="nav-link">
                                 <i class="icon-puzzle"></i>
                                 <span class="title">Markalar</span>
                             </a>
                         </li>
-                        <li class="nav-item  ">
+                        <li class="nav-item @(this.ViewContext.RouteData.Values["controller"].ToString() == "Categories"?"active":"")"> 
                             <a asp-action="Index" asp-controller="Categories" class="nav-link">
                                 <i class="icon-puzzle"></i>
                                 <span class="title">Kategoriler</span>
                             </a>
                         </li>
-                        <li class="nav-item  ">
+                        <li class="nav-item @(this.ViewContext.RouteData.Values["controller"].ToString() == "Suppliers"?"active":"")"> 
                             <a asp-action="Index" asp-controller="Suppliers" class="nav-link">
                                 <i class="icon-puzzle"></i>
                                 <span class="title">Tedarikçiler</span>
                             </a>
                         </li>
-                        <li class="nav-item  ">
+                        <li class="nav-item  @(this.ViewContext.RouteData.Values["controller"].ToString() == "Slides"?"active":"")">
                             <a asp-action="Index" asp-controller="Slides" class="nav-link">
                                 <i class="icon-puzzle"></i>
                                 <span class="title">Slaytlar</span>
                             </a>
                         </li>
-                        <li class="nav-item  ">
+                        <li class="nav-item @(this.ViewContext.RouteData.Values["controller"].ToString() == "Menus"?"active":"")"> 
                             <a asp-action="Index" asp-controller="Menus" class="nav-link">
                                 <i class="icon-puzzle"></i>
                                 <span class="title">Menüler</span>
                             </a>
                         </li>
-                        <li class="nav-item  ">
+                        <li class="nav-item @(this.ViewContext.RouteData.Values["controller"].ToString() == "MenuItems"?"active":"")">
                             <a asp-action="Index" asp-controller="MenuItems" class="nav-link">
                                 <i class="icon-puzzle"></i>
                                 <span class="title">Menü Öğeleri</span>
                             </a>
                         </li>
-                        <li class="nav-item  ">
+                        <li class="nav-item @(this.ViewContext.RouteData.Values["controller"].ToString() == "Regions"?"active":"")"> 
                             <a asp-action="Index" asp-controller="Regions" class="nav-link">
                                 <i class="icon-puzzle"></i>
                                 <span class="title">Bölgeler</span>
                             </a>
                         </li>
-                    <li class="nav-item  ">
+                    <li class="nav-item @(this.ViewContext.RouteData.Values["controller"].ToString() == "User"?"active":"")"> 
                         <a asp-action="Index" asp-controller="User" class="nav-link">
                             <i class="icon-puzzle"></i>
                             <span class="title">Kullanıcılar</span>
@@ -263,7 +248,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!-- BEGIN FOOTER -->
 		<div class="page-footer">
             <div class="page-footer-inner">
-                @DateTime.Now.Year &copy; CommerceV3 By UMUT CAKAR
+                @DateTime.Now.Year &copy; Her Hakkı Saklıdır.
             </div>
 			<div class="scroll-to-top">
 				<i class="icon-arrow-up"></i>
